# ai3dObjViewer

./: CLAUDE.md  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md
assets/: README.md
assets/models/: viking_room.mtl
assets/scenes/: default_scene.json
shaders/: fragment.frag.glsl  fragment_textured.frag.glsl  fragment_untextured.frag.glsl  vertex.vert.glsl  vertex_textured.vert.glsl  vertex_untextured.vert.glsl
src/: Application.cpp  Application.h  MatrixTestCode.cpp  main.cpp
src/geometry/: GeometryGenerator.cpp  GeometryGenerator.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h
src/math/: Matrix4.cpp  Matrix4.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/rendering/: Camera.cpp  Camera.h  DynamicUBO.cpp  DynamicUBO.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/scene/: GeneratedModel.cpp  GeneratedModel.h  JsonSupport.h  LoadedModel.cpp  LoadedModel.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h
src/utils/: JsonSupport.cpp  JsonSupport.h
src/utils/logger/: Logging.cpp  Logging.h  logToFile.h
src/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEngine.cpp  VulkanEngine.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h
